# screenflow

./: README.md
backend/: .flake8  pyproject.toml  server.py
backend/src/: alembic.ini  config.py  main.py
backend/src/extensions/: __init__.py  automation.py  database.py  redis.py
backend/src/libs/: passport.py  token.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 234fd4747a70_account_tenant_project.py  815f5e7c9bdb_add_current_version.py  d8e273a5687f_add_current_version.py
backend/src/models/: __init__.py  account.py  base.py  project.py
backend/src/models/dto/: element.py  page.py  project.py  scenario.py
backend/src/services/: Project.py  account.py  base.py  page.py  page_element.py  project_version.py  scenario.py  tenant.py
backend/src/web/: auth.py  page.py  page_element.py  project.py  scenario.py  setup.py
frontend/: .env.dev  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/components/: AnimateNumber.tsx  Main.tsx  MotionLazy.tsx  SimpleLoading.tsx
frontend/src/layout/: Layout.tsx  Logout.tsx  Sidebar.tsx
frontend/src/routes/: index.tsx
frontend/src/services/: project.ts
frontend/src/stores/: useGlobalStore.ts
frontend/src/utils/: auth.ts  http.ts
frontend/src/views/dashboard/: DashboardView.tsx  ProjectCard.tsx  ProjectStatus.tsx  ScenarioCard.tsx
frontend/src/views/login/: LoginView.tsx
frontend/src/views/project/: ProjectView.tsx
frontend/src/views/setting/: SettingView.tsx
(+2 files in other folders)
