[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["jackson.wen <jackson.wen@xm.wonder.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
alembic = "^1.13.1"
sqlalchemy = {extras = ["postgresql-asyncpg"], version = "^2.0.30"}
sqlmodel = "^0.0.18"
pyjwt = "^2.8.0"
redis = "^5.0.4"
selenium = "^4.21.0"
psycopg2-binary = "^2.9.9"
apscheduler = "^3.10.4"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

